@@ -2071,14 +2071,18 @@ typedef struct tagNMTREEVIEWW {
 #define _NM_TREEVIEWW tagNMTREEVIEWW
 #define NM_TREEVIEWW NMTREEVIEWW
 #define LPNM_TREEVIEWW LPNMTREEVIEWW
-typedef struct _TV_DISPINFOA {
+typedef struct tagNMTVDISPINFOA {
 	NMHDR hdr;
-	TV_ITEMA item;
-} TV_DISPINFOA;
-typedef struct _TV_DISPINFOW {
+	TVITEMA item;
+} NMTVDISPINFOA, *LPNMTVDISPINFOA;
+#define _TV_DISPINFOA tagNMTVDISPINFOA
+#define TV_DISPINFOA NMTVDISPINFOA
+typedef struct tagNMTVDISPINFOW {
 	NMHDR hdr;
-	TV_ITEMW item;
-} TV_DISPINFOW;
+	TVITEMW item;
+} NMTVDISPINFOW, *LPNMTVDISPINFOW;
+#define _TV_DISPINFOW tagNMTVDISPINFOW
+#define TV_DISPINFOW NMTVDISPINFOW
 typedef struct _TV_KEYDOWN {
 	NMHDR hdr;
 	WORD wVKey;
@@ -2698,7 +2702,9 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TVM_SETITEM TVM_SETITEMW
 #define TVM_EDITLABEL TVM_EDITLABELW
 #define TVM_GETISEARCHSTRING TVM_GETISEARCHSTRINGW
-#define TV_DISPINFO TV_DISPINFOW
+#define TV_DISPINFO NMTVDISPINFOW
+#define NMTVDISPINFO NMTVDISPINFOW
+#define LPNMTVDISPINFO LPNMTVDISPINFOW
 #define TVN_SELCHANGING TVN_SELCHANGINGW
 #define TVN_SELCHANGED TVN_SELCHANGEDW
 #define TVN_GETDISPINFO TVN_GETDISPINFOW
@@ -2846,7 +2852,9 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TVM_SETITEM TVM_SETITEMA
 #define TVM_EDITLABEL TVM_EDITLABELA
 #define TVM_GETISEARCHSTRING TVM_GETISEARCHSTRINGA
-#define TV_DISPINFO TV_DISPINFOA
+#define TV_DISPINFO NMTVDISPINFOA
+#define NMTVDISPINFO NMTVDISPINFOA
+#define LPNMTVDISPINFO LPNMTVDISPINFOA
 #define TVN_SELCHANGING TVN_SELCHANGINGA
 #define TVN_SELCHANGED TVN_SELCHANGEDA
 #define TVN_GETDISPINFO TVN_GETDISPINFOA
