@@ -1,3 +1,10 @@
+2003-07-08  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/commctrl.h (NMTVDISPINFO[AW]): Replace obsolete struct
+	names _TV_DISPINFO[AW] and typedefs. Add defines for backward
+	compatability. Thanks to Magnus Olsen <greatlord@users.sf.net>
+	for report.
+
 2003-07-03  Earnie Boyd  <earnie@users.sf.net>
 
 	* config.guess, config.sub: Update with new versions from ftp.gnu.org.
